--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ add_executable(
 
   ${CMAKE_CURRENT_SOURCE_DIR}/test/main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/server_test.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/test/mp11_test.cpp
 )
 
 target_link_libraries(foxy_tests foxy_core)
