Began routing scheme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,13 @@ find_path(CATCH_INCLUDE_DIR catch.hpp)
 add_library(Catch INTERFACE)
 target_include_directories(Catch INTERFACE ${CATCH_INCLUDE_DIR})
 
-find_package(Boost 1.66.0 REQUIRED COMPONENTS system coroutine)
+find_package(Boost 1.66 REQUIRED COMPONENTS system coroutine)
 
 add_library(
   foxy_core
 
   STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/src/connection.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/listener.cpp
 )
 
 if (MSVC)
@@ -56,6 +55,7 @@ add_executable(
   ${CMAKE_CURRENT_SOURCE_DIR}/test/main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/server_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/mp11_test.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/test/listener_test.cpp
 )
 
 target_link_libraries(foxy_tests foxy_core)
