Progressed on filtering idle connections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ add_executable(
   ${CMAKE_CURRENT_SOURCE_DIR}/test/mp11_test.cpp
   #${CMAKE_CURRENT_SOURCE_DIR}/test/listener_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/timer_test.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/test/remove_dead_connections_test.cpp
 )
 
 target_link_libraries(foxy_tests foxy_core test_utils)
