--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(
 
   STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/src/log.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/listener.cpp
 )
 
 if (MSVC)
@@ -57,8 +58,7 @@ add_executable(
   ${CMAKE_CURRENT_SOURCE_DIR}/test/async_read_body_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/mp11_test.cpp
   #${CMAKE_CURRENT_SOURCE_DIR}/test/listener_test.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/test/timer_test.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/test/remove_dead_connections_test.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/test/timeout_test.cpp
 )
 
 target_link_libraries(foxy_tests foxy_core test_utils)
