--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ add_executable(
   ${CMAKE_CURRENT_SOURCE_DIR}/test/mp11_test.cpp
   #${CMAKE_CURRENT_SOURCE_DIR}/test/listener_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/timeout_test.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/test/route_test.cpp
 )
 
 target_link_libraries(foxy_tests foxy_core test_utils)
