Useless stackful coros, updated stream

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,22 @@ cmake_minimum_required(VERSION 3.9)
 
 project(foxy)
 
-find_path(CATCH_INCLUDE_DIR "catch.hpp")
+find_path(
+  CATCH_INCLUDE_DIR
+  "catch.hpp"
+
+  # TODO: fix this hard-coded path at some point
+  "/vcpkg/installed/x64-windows/include"
+)
+
 add_library(Catch INTERFACE)
 target_include_directories(Catch INTERFACE ${CATCH_INCLUDE_DIR})
 
-find_package(Boost 1.66 REQUIRED COMPONENTS system coroutine)
+find_package(
+  Boost 1.67
+  REQUIRED
+  COMPONENTS system coroutine context
+)
 
 add_library(
   foxy_core
@@ -38,6 +49,9 @@ target_include_directories(
   PUBLIC
   ${Boost_INCLUDE_DIRS}
   ${CMAKE_CURRENT_SOURCE_DIR}/include
+
+  # TODO: fix this hard-coded path
+  "/Users/cmaza/source/beast/include"
 )
 
 target_link_libraries(
@@ -46,12 +60,13 @@ target_link_libraries(
   PUBLIC
   ${Boost_COROUTINE_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
+  ${Boost_CONTEXT_LIBRARY}
 )
 
 # keep this around, just in case
-# if (MSVC)
-#   target_link_libraries(foxy_core PUBLIC Boost::disable_autolinking)
-# endif()
+if (MSVC)
+  target_link_libraries(foxy_core PUBLIC Boost::disable_autolinking)
+endif()
 
 add_library(test_utils INTERFACE)
 target_include_directories(test_utils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
@@ -61,14 +76,14 @@ add_executable(
 
   ${CMAKE_CURRENT_SOURCE_DIR}/test/main.cpp
   # ${CMAKE_CURRENT_SOURCE_DIR}/test/server_test.cpp
-  # ${CMAKE_CURRENT_SOURCE_DIR}/test/async_read_body_test.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/test/async_read_body_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/mp11_test.cpp
   #${CMAKE_CURRENT_SOURCE_DIR}/test/listener_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/timeout_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/route_test.cpp
 )
 
-target_link_libraries(foxy_tests PUBLIC foxy_core test_utils Catch)
+target_link_libraries(foxy_tests foxy_core test_utils Catch)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake.modules/")
 enable_testing()
