Made great progress in understanding coroutines and Foxy's future

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ add_executable(
 
   ${CMAKE_CURRENT_SOURCE_DIR}/test/main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/async_read_body_test.cpp
-  #${CMAKE_CURRENT_SOURCE_DIR}/test/listener_test.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/test/listener_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/route_test.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/test/client_test.cpp
 )
