--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(
   ${CMAKE_CURRENT_SOURCE_DIR}/src/log.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/connection.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/listener.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/session.cpp
 )
 
 if (MSVC)
